# fixname

./: CMakeLists.txt  README.md
resource/: test.xml
src/: CMakeLists.txt  main.cpp  xmlfix.cpp  xmlfix.h
